# sw-cor24-x-pc-aotc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.agentrail/: plan.md  saga.toml
.agentrail/sessions/: 07012ae5-6d5c-4695-87d7-818ed2fed00c.jsonl  1a977b88-f414-4fb5-a85b-7c922de57026.jsonl  4f24a26b-5d8b-42a2-8af8-c2824cf79aa0.jsonl  5c6268c7-b0b2-4f95-b836-a6c1f518367c.jsonl  5dc2ce4e-c100-4f00-be67-596936ff3c1e.jsonl  70fb8267-6682-4175-804f-82a000745fba.jsonl  7aad9982-26a5-4e43-ade4-00c324bf7146.jsonl  7ef93a13-baca-4f6c-b3cf-875db697929c.jsonl
crates/cor24-emit-asm/: Cargo.toml
crates/pcode-analyze/: Cargo.toml
crates/pcode-aotc/: Cargo.toml
crates/pcode-aotc/src/: main.rs
crates/pcode-aotc/tests/: differential.rs
crates/pcode-lower/: Cargo.toml
crates/pcode-model/: Cargo.toml
docs/: abi.md  ai_agent_instructions.md  initial-prompt.txt  pcode-spec.md  research.txt
scripts/: compile-test.sh  run-tests.sh
tests/: run_diff_tests.sh
tests/golden/: arithmetic.expected  locals.expected  procedure_call.expected  recursion.expected  while_loop.expected
tests/p24/: array_access.p24  array_sum.p24  byte_array.p24  complex_if.p24  for_loops.p24  indirect_store.p24  memcpy_test.p24  memset_test.p24  nested_loops.p24  record_field.p24
tests/pascal/: arithmetic.pas  complex_if.pas  for_loops.pas  globals.pas  if_else.pas  locals.pas  nested_calls.pas  nested_loops.pas  procedure_call.pas  recursion.pas  while_loop.pas
tests/spc/: array_access.spc  array_sum.spc  byte_array.spc  indirect_store.spc  memcpy_test.spc  memset_test.spc  record_field.spc
(+32 files in other folders)
